# pyb-sim-models

./: .gitignore  MANIFEST.in  README.md  pybullet_Robotiq2F85.py  pybullet_UR5.py  pybullet_UR5_2F85.py  setup.py  test_environment.py
models/: 2F85.urdf  2F85_BuildURDF.xacro  Robotiq_2F85_BuildURDF.xacro  UR5.urdf  UR5_2F85.urdf  UR5_2F85_BuildURDF.xacro
models/HammerHuge/: Mass Properties of Hammer Handle.txt  Mass Properties of Hammer Head.txt  Mass Properties of Hammer.txt
models/HammerHuge/meshes/: Hammer_Head.stl
models/HammerSmaller/: package.xml
models/HammerSmaller/launch/: display.launch
models/HammerSmaller/urdf/: HammerSmaller.urdf
models/Robotiq_2F85/: CMakeLists.txt  package.xml
models/Robotiq_2F85/config/: joint_names_Assembled_Volumes_URDF.yaml
models/Robotiq_2F85/launch/: display.launch  gazebo.launch
models/Robotiq_2F85/urdf/: Mechanical_Properties.csv  Robotiq_2F85.urdf.xacro
models/robotiq_2f_model/: MechanicalProperties2F85.txt  robotiq_2f_85.urdf.xacro  robotiq_ur_coupler.urdf.xacro
models/ur5/: ur5.urdf.xacro
pbsm/: __init__.py
pbsm/Robotiq2f85/: __init__.py  pybullet_Robotiq2F85.py
pbsm/models/: Robotiq_2F85_BuildURDF.xacro  UR5.urdf  UR5_2F85.urdf  UR5_2F85_BuildURDF.xacro  UR5_BuildURDF.xacro
pbsm/models/CompositeTestObject/: GenerateObjectConfiguration.py  README.md  __init__.py  package.xml
pbsm/models/CompositeTestObject/cad/: HalfBody.SLDPRT  HalfBody.STL
pbsm/models/CompositeTestObject/meshes/: outershell.stl
pbsm/models/CompositeTestObject/urdf/: compositeH.urdf
pbsm/models/HammerHuge/: Hammer.urdf
pbsm/models/HammerHuge/meshes/: Hammer_Handle.stl
pbsm/models/HammerSmaller/: CMakeLists.txt
pbsm/models/HammerSmaller/launch/: gazebo.launch
pbsm/models/HammerSmaller/meshes/: Hammer.ply  handle.stl  head.stl
pbsm/models/HammerSmaller/urdf/: HammerSmaller.csv
pbsm/models/Robotiq_2F85/: CMakeLists.txt  README.md
pbsm/models/cube_small/: cube_small.ply
pbsm/models/ur5/: README.md
pbsm/models/ur5_compositeobject/: generate_and_simulate.py
pbsm/ur5/: __init__.py  pybullet_UR5.py
pbsm/ur5_2f85/: __init__.py  pybullet_UR5_2F85.py
(+4 files in other folders)
