<package format="2">
  <name>Robotiq 2F85 Simulation Model</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Robotiq 2F85</p>
    <p>This package contains configuration data, 3D models and launch files
for the Robotiq 2F85 gripper.</p>
  </description>
  <author>Philippe Nadeau</author>
  <maintainer email="philippe.nadeau@robotics.utias.utoronto.ca" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <export>
    <architecture_independent />
  </export>
</package>
